src/compiler/Parser/RQLParser.cpp

// Generated from RQL.g4 by ANTLR 4.9.3


#include "RQLListener.h"

#include "RQLParser.h"


using namespace antlrcpp;
using namespace antlr4;

RQLParser::RQLParser(TokenStream* input) : Parser(input)
{
    _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

RQLParser::~RQLParser()
{
    delete _interpreter;
}

std::string RQLParser::getGrammarFileName() const
{
    return "RQL.g4";
}

const std::vector<std::string> &RQLParser::getRuleNames() const
{
    return _ruleNames;
}

dfa::Vocabulary &RQLParser::getVocabulary() const
{
    return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

RQLParser::ProgContext::ProgContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

tree::TerminalNode* RQLParser::ProgContext::EOF()
{
    return getToken(RQLParser::EOF, 0);
}

std::vector<RQLParser::Select_statementContext*> RQLParser::ProgContext::select_statement()
{
    return getRuleContexts<RQLParser::Select_statementContext>();
}

RQLParser::Select_statementContext* RQLParser::ProgContext::select_statement(size_t i)
{
    return getRuleContext<RQLParser::Select_statementContext>(i);
}

std::vector<RQLParser::Declare_statementContext*> RQLParser::ProgContext::declare_statement()
{
    return getRuleContexts<RQLParser::Declare_statementContext>();
}

RQLParser::Declare_statementContext* RQLParser::ProgContext::declare_statement(size_t i)
{
    return getRuleContext<RQLParser::Declare_statementContext>(i);
}


size_t RQLParser::ProgContext::getRuleIndex() const
{
    return RQLParser::RuleProg;
}

void RQLParser::ProgContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterProg(this);
}

void RQLParser::ProgContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitProg(this);
}

RQLParser::ProgContext* RQLParser::prog()
{
    ProgContext* _localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
    enterRule(_localctx, 0, RQLParser::RuleProg);
    size_t _la = 0;
#if __cplusplus > 201703L
    auto onExit = finally([ =, this] {
#else
    auto onExit = finally([ = ] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(44);
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
            setState(44);
            _errHandler->sync(this);
            switch (_input->LA(1)) {
                case RQLParser::SELECT: {
                        setState(42);
                        select_statement();
                        break;
                    }
                case RQLParser::DECLARE: {
                        setState(43);
                        declare_statement();
                        break;
                    }
                default:
                    throw NoViableAltException(this);
            }
            setState(46);
            _errHandler->sync(this);
            _la = _input->LA(1);
        } while (_la == RQLParser::SELECT
            || _la == RQLParser::DECLARE);
        setState(48);
        match(RQLParser::EOF);
    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }
    return _localctx;
}

//----------------- Select_statementContext ------------------------------------------------------------------

RQLParser::Select_statementContext::Select_statementContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}


size_t RQLParser::Select_statementContext::getRuleIndex() const
{
    return RQLParser::RuleSelect_statement;
}

void RQLParser::Select_statementContext::copyFrom(Select_statementContext* ctx)
{
    ParserRuleContext::copyFrom(ctx);
}

//----------------- SelectContext ------------------------------------------------------------------

tree::TerminalNode* RQLParser::SelectContext::SELECT()
{
    return getToken(RQLParser::SELECT, 0);
}

RQLParser::Select_listContext* RQLParser::SelectContext::select_list()
{
    return getRuleContext<RQLParser::Select_listContext>(0);
}

tree::TerminalNode* RQLParser::SelectContext::STREAM()
{
    return getToken(RQLParser::STREAM, 0);
}

tree::TerminalNode* RQLParser::SelectContext::ID()
{
    return getToken(RQLParser::ID, 0);
}

tree::TerminalNode* RQLParser::SelectContext::FROM()
{
    return getToken(RQLParser::FROM, 0);
}

RQLParser::Stream_expressionContext* RQLParser::SelectContext::stream_expression()
{
    return getRuleContext<RQLParser::Stream_expressionContext>(0);
}

RQLParser::SelectContext::SelectContext(Select_statementContext* ctx) { copyFrom(ctx); }

void RQLParser::SelectContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterSelect(this);
}
void RQLParser::SelectContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitSelect(this);
}
RQLParser::Select_statementContext* RQLParser::select_statement()
{
    Select_statementContext* _localctx = _tracker.createInstance<Select_statementContext>(_ctx, getState());
    enterRule(_localctx, 2, RQLParser::RuleSelect_statement);
#if __cplusplus > 201703L
    auto onExit = finally([ =, this] {
#else
    auto onExit = finally([ = ] {
#endif
        exitRule();
    });
    try {
        _localctx = _tracker.createInstance<RQLParser::SelectContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(50);
        match(RQLParser::SELECT);
        setState(51);
        select_list();
        setState(52);
        match(RQLParser::STREAM);
        setState(53);
        match(RQLParser::ID);
        setState(54);
        match(RQLParser::FROM);
        setState(55);
        stream_expression();
    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }
    return _localctx;
}

//----------------- RationalContext ------------------------------------------------------------------

RQLParser::RationalContext::RationalContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}


size_t RQLParser::RationalContext::getRuleIndex() const
{
    return RQLParser::RuleRational;
}

void RQLParser::RationalContext::copyFrom(RationalContext* ctx)
{
    ParserRuleContext::copyFrom(ctx);
}

//----------------- RationalAsDecimalContext ------------------------------------------------------------------

tree::TerminalNode* RQLParser::RationalAsDecimalContext::DECIMAL()
{
    return getToken(RQLParser::DECIMAL, 0);
}

RQLParser::RationalAsDecimalContext::RationalAsDecimalContext(RationalContext* ctx) { copyFrom(ctx); }

void RQLParser::RationalAsDecimalContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterRationalAsDecimal(this);
}
void RQLParser::RationalAsDecimalContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitRationalAsDecimal(this);
}
//----------------- RationalAsFloatContext ------------------------------------------------------------------

tree::TerminalNode* RQLParser::RationalAsFloatContext::FLOAT()
{
    return getToken(RQLParser::FLOAT, 0);
}

RQLParser::RationalAsFloatContext::RationalAsFloatContext(RationalContext* ctx) { copyFrom(ctx); }

void RQLParser::RationalAsFloatContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterRationalAsFloat(this);
}
void RQLParser::RationalAsFloatContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitRationalAsFloat(this);
}
//----------------- RationalAsFraction_proformaContext ------------------------------------------------------------------

RQLParser::FractionContext* RQLParser::RationalAsFraction_proformaContext::fraction()
{
    return getRuleContext<RQLParser::FractionContext>(0);
}

RQLParser::RationalAsFraction_proformaContext::RationalAsFraction_proformaContext(RationalContext* ctx) { copyFrom(ctx); }

void RQLParser::RationalAsFraction_proformaContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterRationalAsFraction_proforma(this);
}
void RQLParser::RationalAsFraction_proformaContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitRationalAsFraction_proforma(this);
}
RQLParser::RationalContext* RQLParser::rational()
{
    RationalContext* _localctx = _tracker.createInstance<RationalContext>(_ctx, getState());
    enterRule(_localctx, 4, RQLParser::RuleRational);
#if __cplusplus > 201703L
    auto onExit = finally([ =, this] {
#else
    auto onExit = finally([ = ] {
#endif
        exitRule();
    });
    try {
        setState(60);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
            case 1: {
                    _localctx = _tracker.createInstance<RQLParser::RationalAsFraction_proformaContext>(_localctx);
                    enterOuterAlt(_localctx, 1);
                    setState(57);
                    fraction();
                    break;
                }
            case 2: {
                    _localctx = _tracker.createInstance<RQLParser::RationalAsFloatContext>(_localctx);
                    enterOuterAlt(_localctx, 2);
                    setState(58);
                    match(RQLParser::FLOAT);
                    break;
                }
            case 3: {
                    _localctx = _tracker.createInstance<RQLParser::RationalAsDecimalContext>(_localctx);
                    enterOuterAlt(_localctx, 3);
                    setState(59);
                    match(RQLParser::DECIMAL);
                    break;
                }
            default:
                break;
        }
    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }
    return _localctx;
}

//----------------- FractionContext ------------------------------------------------------------------

RQLParser::FractionContext::FractionContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}

std::vector<tree::TerminalNode*> RQLParser::FractionContext::DECIMAL()
{
    return getTokens(RQLParser::DECIMAL);
}

tree::TerminalNode* RQLParser::FractionContext::DECIMAL(size_t i)
{
    return getToken(RQLParser::DECIMAL, i);
}

tree::TerminalNode* RQLParser::FractionContext::DIVIDE()
{
    return getToken(RQLParser::DIVIDE, 0);
}


size_t RQLParser::FractionContext::getRuleIndex() const
{
    return RQLParser::RuleFraction;
}

void RQLParser::FractionContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterFraction(this);
}

void RQLParser::FractionContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitFraction(this);
}

RQLParser::FractionContext* RQLParser::fraction()
{
    FractionContext* _localctx = _tracker.createInstance<FractionContext>(_ctx, getState());
    enterRule(_localctx, 6, RQLParser::RuleFraction);
#if __cplusplus > 201703L
    auto onExit = finally([ =, this] {
#else
    auto onExit = finally([ = ] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(62);
        match(RQLParser::DECIMAL);
        setState(63);
        match(RQLParser::DIVIDE);
        setState(64);
        match(RQLParser::DECIMAL);
    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }
    return _localctx;
}

//----------------- Declare_statementContext ------------------------------------------------------------------

RQLParser::Declare_statementContext::Declare_statementContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}


size_t RQLParser::Declare_statementContext::getRuleIndex() const
{
    return RQLParser::RuleDeclare_statement;
}

void RQLParser::Declare_statementContext::copyFrom(Declare_statementContext* ctx)
{
    ParserRuleContext::copyFrom(ctx);
}

//----------------- DeclareContext ------------------------------------------------------------------

tree::TerminalNode* RQLParser::DeclareContext::DECLARE()
{
    return getToken(RQLParser::DECLARE, 0);
}

RQLParser::Declare_listContext* RQLParser::DeclareContext::declare_list()
{
    return getRuleContext<RQLParser::Declare_listContext>(0);
}

tree::TerminalNode* RQLParser::DeclareContext::STREAM()
{
    return getToken(RQLParser::STREAM, 0);
}

tree::TerminalNode* RQLParser::DeclareContext::COMMA()
{
    return getToken(RQLParser::COMMA, 0);
}

RQLParser::RationalContext* RQLParser::DeclareContext::rational()
{
    return getRuleContext<RQLParser::RationalContext>(0);
}

tree::TerminalNode* RQLParser::DeclareContext::FILE()
{
    return getToken(RQLParser::FILE, 0);
}

tree::TerminalNode* RQLParser::DeclareContext::ID()
{
    return getToken(RQLParser::ID, 0);
}

tree::TerminalNode* RQLParser::DeclareContext::STRING()
{
    return getToken(RQLParser::STRING, 0);
}

RQLParser::DeclareContext::DeclareContext(Declare_statementContext* ctx) { copyFrom(ctx); }

void RQLParser::DeclareContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterDeclare(this);
}
void RQLParser::DeclareContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitDeclare(this);
}
RQLParser::Declare_statementContext* RQLParser::declare_statement()
{
    Declare_statementContext* _localctx = _tracker.createInstance<Declare_statementContext>(_ctx, getState());
    enterRule(_localctx, 8, RQLParser::RuleDeclare_statement);
#if __cplusplus > 201703L
    auto onExit = finally([ =, this] {
#else
    auto onExit = finally([ = ] {
#endif
        exitRule();
    });
    try {
        _localctx = _tracker.createInstance<RQLParser::DeclareContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(66);
        match(RQLParser::DECLARE);
        setState(67);
        declare_list();
        setState(68);
        match(RQLParser::STREAM);
        setState(69);
        antlrcpp::downCast<DeclareContext*>(_localctx)->stream_name = match(RQLParser::ID);
        setState(70);
        match(RQLParser::COMMA);
        setState(71);
        rational();
        setState(72);
        match(RQLParser::FILE);
        setState(73);
        antlrcpp::downCast<DeclareContext*>(_localctx)->file_name = match(RQLParser::STRING);
    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }
    return _localctx;
}

//----------------- Declare_listContext ------------------------------------------------------------------

RQLParser::Declare_listContext::Declare_listContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}


size_t RQLParser::Declare_listContext::getRuleIndex() const
{
    return RQLParser::RuleDeclare_list;
}

void RQLParser::Declare_listContext::copyFrom(Declare_listContext* ctx)
{
    ParserRuleContext::copyFrom(ctx);
}

//----------------- DeclarationListContext ------------------------------------------------------------------

std::vector<RQLParser::Field_declarationContext*> RQLParser::DeclarationListContext::field_declaration()
{
    return getRuleContexts<RQLParser::Field_declarationContext>();
}

RQLParser::Field_declarationContext* RQLParser::DeclarationListContext::field_declaration(size_t i)
{
    return getRuleContext<RQLParser::Field_declarationContext>(i);
}

std::vector<tree::TerminalNode*> RQLParser::DeclarationListContext::COMMA()
{
    return getTokens(RQLParser::COMMA);
}

tree::TerminalNode* RQLParser::DeclarationListContext::COMMA(size_t i)
{
    return getToken(RQLParser::COMMA, i);
}

RQLParser::DeclarationListContext::DeclarationListContext(Declare_listContext* ctx) { copyFrom(ctx); }

void RQLParser::DeclarationListContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterDeclarationList(this);
}
void RQLParser::DeclarationListContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitDeclarationList(this);
}
RQLParser::Declare_listContext* RQLParser::declare_list()
{
    Declare_listContext* _localctx = _tracker.createInstance<Declare_listContext>(_ctx, getState());
    enterRule(_localctx, 10, RQLParser::RuleDeclare_list);
    size_t _la = 0;
#if __cplusplus > 201703L
    auto onExit = finally([ =, this] {
#else
    auto onExit = finally([ = ] {
#endif
        exitRule();
    });
    try {
        _localctx = _tracker.createInstance<RQLParser::DeclarationListContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(75);
        field_declaration();
        setState(80);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == RQLParser::COMMA) {
            setState(76);
            match(RQLParser::COMMA);
            setState(77);
            field_declaration();
            setState(82);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }
    return _localctx;
}

//----------------- Field_declarationContext ------------------------------------------------------------------

RQLParser::Field_declarationContext::Field_declarationContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}


size_t RQLParser::Field_declarationContext::getRuleIndex() const
{
    return RQLParser::RuleField_declaration;
}

void RQLParser::Field_declarationContext::copyFrom(Field_declarationContext* ctx)
{
    ParserRuleContext::copyFrom(ctx);
}

//----------------- SingleDeclarationContext ------------------------------------------------------------------

tree::TerminalNode* RQLParser::SingleDeclarationContext::ID()
{
    return getToken(RQLParser::ID, 0);
}

RQLParser::Field_typeContext* RQLParser::SingleDeclarationContext::field_type()
{
    return getRuleContext<RQLParser::Field_typeContext>(0);
}

RQLParser::SingleDeclarationContext::SingleDeclarationContext(Field_declarationContext* ctx) { copyFrom(ctx); }

void RQLParser::SingleDeclarationContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterSingleDeclaration(this);
}
void RQLParser::SingleDeclarationContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitSingleDeclaration(this);
}
RQLParser::Field_declarationContext* RQLParser::field_declaration()
{
    Field_declarationContext* _localctx = _tracker.createInstance<Field_declarationContext>(_ctx, getState());
    enterRule(_localctx, 12, RQLParser::RuleField_declaration);
#if __cplusplus > 201703L
    auto onExit = finally([ =, this] {
#else
    auto onExit = finally([ = ] {
#endif
        exitRule();
    });
    try {
        _localctx = _tracker.createInstance<RQLParser::SingleDeclarationContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(83);
        match(RQLParser::ID);
        setState(84);
        field_type();
    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }
    return _localctx;
}

//----------------- Field_typeContext ------------------------------------------------------------------

RQLParser::Field_typeContext::Field_typeContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState)
{
}


size_t RQLParser::Field_typeContext::getRuleIndex() const
{
    return RQLParser::RuleField_type;
}

void RQLParser::Field_typeContext::copyFrom(Field_typeContext* ctx)
{
    ParserRuleContext::copyFrom(ctx);
}

//----------------- TypeArrayContext ------------------------------------------------------------------

tree::TerminalNode* RQLParser::TypeArrayContext::STRING_T()
{
    return getToken(RQLParser::STRING_T, 0);
}

tree::TerminalNode* RQLParser::TypeArrayContext::INTARRAY_T()
{
    return getToken(RQLParser::INTARRAY_T, 0);
}

tree::TerminalNode* RQLParser::TypeArrayContext::BYTEARRAY_T()
{
    return getToken(RQLParser::BYTEARRAY_T, 0);
}

tree::TerminalNode* RQLParser::TypeArrayContext::DECIMAL()
{
    return getToken(RQLParser::DECIMAL, 0);
}

RQLParser::TypeArrayContext::TypeArrayContext(Field_typeContext* ctx) { copyFrom(ctx); }

void RQLParser::TypeArrayContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterTypeArray(this);
}
void RQLParser::TypeArrayContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitTypeArray(this);
}
//----------------- TypeIntContext ------------------------------------------------------------------

tree::TerminalNode* RQLParser::TypeIntContext::INTEGER_T()
{
    return getToken(RQLParser::INTEGER_T, 0);
}

RQLParser::TypeIntContext::TypeIntContext(Field_typeContext* ctx) { copyFrom(ctx); }

void RQLParser::TypeIntContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterTypeInt(this);
}
void RQLParser::TypeIntContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitTypeInt(this);
}
//----------------- TypeFloatContext ------------------------------------------------------------------

tree::TerminalNode* RQLParser::TypeFloatContext::FLOAT_T()
{
    return getToken(RQLParser::FLOAT_T, 0);
}

RQLParser::TypeFloatContext::TypeFloatContext(Field_typeContext* ctx) { copyFrom(ctx); }

void RQLParser::TypeFloatContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterTypeFloat(this);
}
void RQLParser::TypeFloatContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitTypeFloat(this);
}
//----------------- TypeUnsigedContext ------------------------------------------------------------------

tree::TerminalNode* RQLParser::TypeUnsigedContext::UNSIGNED_T()
{
    return getToken(RQLParser::UNSIGNED_T, 0);
}

RQLParser::TypeUnsigedContext::TypeUnsigedContext(Field_typeContext* ctx) { copyFrom(ctx); }

void RQLParser::TypeUnsigedContext::enterRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterTypeUnsiged(this);
}
void RQLParser::TypeUnsigedContext::exitRule(tree::ParseTreeListener* listener)
{
    auto parserListener = dynamic_cast<RQLListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitTypeUnsiged(this);
}
//----------------- TypeByteContext ------------------------------------------------------------------

tree::TerminalNode* RQLParser::TypeByteContext::BYTE_T()
{
    return getToken(RQLParser::BYTE_T, 0);
}

RQLParser::TypeByteContext::TypeByteContext(Field_typeContext* ctx) { copyFrom(ctx); }
